Ctrl F in project to remove deleted variables

--- a/less/src/boxmenu.less
+++ b/less/src/boxmenu.less
@@ -75,7 +75,7 @@
 	}
 
 	.menu-item-graphic-overlay {
-		background-color: @teal-green;
+		background-color: @primary-color;
 		color: @white;
 		height: 30px;
 		position: absolute;
