--- a/less/src/contents.less
+++ b/less/src/contents.less
@@ -1,10 +1,10 @@
 button.contents-navigation.base {
   background: @white;
-  color: @midnight-blue;
+  color: @tertiary-color;
 
   .contents-navigation-icon.icon,
   .contents-navigation-text {
-    color: @midnight-blue;
+    color: @tertiary-color;
   }
 }
 
@@ -108,21 +108,21 @@ button.base.contents-navigation {
     .contents-item-title {
       position: relative;
       border-bottom: 1px solid @transparency;
-      color: @stone-grey;
+      color: @dark-grey;
       background-color: @light-grey;
       width: 100%;
       border-radius: 0;
 
       .no-touch &:hover {
         background-color: darken(@light-grey, 10%);
-        color: @stone-grey;
+        color: @dark-grey;
       }
 
       &.highlight {
         // border-left: 5px solid @navigation-color;
-        background-color: @contents-hover;
+        background-color: @tertiary-color;
         .no-touch &:hover {
-          background-color: darken(@contents-hover, 10%);
+          background-color: darken(@tertiary-color, 10%);
         }
       }
 
@@ -204,12 +204,12 @@ button.base.contents-navigation {
     font-size: 24px;
     padding-bottom: 10px;
     line-height: 105%;
-    color: @footer-icon-color;
+    color: @quaternary-color;
   }
 
   .kings-business-school-copyright {
     font-size: 13px;
-    color: @footer-icon-color;
+    color: @quaternary-color;
   }
 }
 
@@ -219,7 +219,7 @@ button.base.contents-navigation {
 
   .contents-landing-page-title {
     background-color: transparent;
-    color: @midnight-blue;
+    color: @tertiary-color;
     border: 0;
 
     .contents-landing-page-title-inner {
@@ -229,21 +229,21 @@ button.base.contents-navigation {
 
     .no-touch &:hover {
       background-color: darken(@white, 10%);
-      color: @midnight-blue;
+      color: @tertiary-color;
       border-radius: 0;
     }
   }
 
   .contents-page-title {
     background-color: @white;
-    color: @midnight-blue;
+    color: @tertiary-color;
     border-radius: 0;
     border-width: 0;
 
 
     .no-touch &:hover {
       background-color: darken(@white, 10%);
-      color: @midnight-blue;
+      color: @tertiary-color;
       border-color: #B7BDBD;
     }
 
