--- a/less/src/drawer.less
+++ b/less/src/drawer.less
@@ -10,7 +10,7 @@
     width: 100%;
     top: 0;
     border-bottom: 1px solid @drawer-border-color;
-    background-color: @stone-grey;
+    background-color: @dark-grey;
     color: @white;
   }
 
@@ -91,6 +91,6 @@
   .result-foundwords,
   .result-preview,
   .result-title {
-    color: @midnight-blue;
+    color: @tertiary-color;
   }
 }
