--- a/less/src/expose.less
+++ b/less/src/expose.less
@@ -7,6 +7,6 @@
 }
 
 .expose-item-content .expose-item-title {
-  background: @teal-green;
+  background: @primary-color;
   font-family: @font-header-family;
 }
