--- a/less/src/mcq.less
+++ b/less/src/mcq.less
@@ -85,7 +85,7 @@
     z-index: 0;
 
     .mcq-item-icon.mcq-answer-icon {
-      color: @teal-green !important;
+      color: @primary-color !important;
     }
   }
 }
