--- a/less/src/narrative.less
+++ b/less/src/narrative.less
@@ -8,14 +8,14 @@
         .item-title;
     }
     .narrative-content {
-        background: @pale-grey;
+        background: @light-grey;
     }
 
     .narrative-controls {
         width: (@icon-size * 2.5);
         height: (@icon-size * 2.5);
         margin-top: -(@icon-size * 2);
-        background-color: @teal-green;
+        background-color: @primary-color;
         color: @white;
         border: @button-border;
         border-radius: 50%;
@@ -30,7 +30,7 @@
 
         .no-touch & {
           &:hover {
-              background-color: @teal-green;
+              background-color: @primary-color;
               color: @white;
               .icon {
                   color: @white;
