--- a/less/src/notify.less
+++ b/less/src/notify.less
@@ -17,7 +17,7 @@
         max-width: @device-width-large;
         margin: auto;
         padding: @notify-padding-top 60px @notify-padding-bottom;
-        background-color: @midnight-blue;
+        background-color: @tertiary-color;
         color: @white;
 
         @media all and (max-width: (@device-width-large + 20px)) {
