--- a/less/src/slider.less
+++ b/less/src/slider.less
@@ -21,10 +21,10 @@
 .slider-widget {
     .slider-holder {
         .rangeslider__handle {
-          background-color: @stone-grey;
+          background-color: @dark-grey;
           &:hover {
             .no-touch & {
-              background-color: @stone-grey;
+              background-color: @dark-grey;
             }
           }
         }
