--- a/less/src/page.less
+++ b/less/src/page.less
@@ -21,7 +21,7 @@
   .page-title {
     display: inline-block;
     margin-bottom: @page-title-margin-bottom;
-    background-color: @midnight-blue;
+    background-color: @tertiary-color;
     color: @white;
     padding: 5px;
   }
@@ -29,7 +29,7 @@
   .page-body {
     display: inline-block;
     margin-bottom: @page-body-margin-bottom;
-    background: @teal-green;
+    background: @primary-color;
     color: @white;
     padding: 5px;
   }
@@ -41,7 +41,7 @@
 }
 
 .page-footer {
-  background-color: @footer-color;
+  background-color: @quaternary-color-inverted;
   width: 100%;
   height: 143px;
 
@@ -70,12 +70,12 @@
       font-size: 24px;
       padding-bottom: 10px;
       line-height: 105%;
-      color: @footer-icon-color;
+      color: @quaternary-color;
     }
 
     .page-footer-copyright {
       font-size: 13px;
-      color: @footer-icon-color;
+      color: @quaternary-color;
     }
   }
 
@@ -94,7 +94,7 @@
       float: right;
 
       .staircase {
-        background-color: @footer-icon-color;
+        background-color: @quaternary-color;
         width: 100px;
         height: 20px;
         position: relative;
