--- a/less/src/quicknav.less
+++ b/less/src/quicknav.less
@@ -8,10 +8,10 @@
   border-radius: 0;
   padding: 23px 13px 20px;
   margin: 0;
-  color: @footer-icon-color;
+  color: @quaternary-color;
 
   &:hover {
-    background-color: @stone-grey;
+    background-color: @dark-grey;
     border: 0;
     color: @white;
     .icon {
@@ -82,8 +82,8 @@
 .article {
   .block.quicknav {
     .quicknav-inner {
-      background-color: @footer-color;
-      color: @footer-icon-color;
+      background-color: @quaternary-color-inverted;
+      color: @quaternary-color;
       max-width: 100%;
       height: 92px;
       padding: 0;
@@ -94,7 +94,7 @@
         width: 1px;
         height: 93px;
         margin-top: 0px;
-        background-color: @footer-icon-color;
+        background-color: @quaternary-color;
         @media all and (max-width: (@device-width-medium)) {
           left: 25%;
         }
@@ -103,7 +103,7 @@
       .icon {
         font-size: 36px;
         top: 27px;
-        color: @footer-icon-color;
+        color: @quaternary-color;
       }
 
       .icon-controls-left {
