--- a/less/src/tabs.less
+++ b/less/src/tabs.less
@@ -110,7 +110,7 @@
 		-moz-box-sizing: border-box;
 		box-sizing: border-box;
 		background: @component-background-color;
-		border: 1px solid @stone-grey;
+		border: 1px solid @dark-grey;
 		border-width: 0 1px 1px 1px;
 		float: right;
 		max-height: 400px;
