--- a/less/src/drawer.less
+++ b/less/src/drawer.less
@@ -10,8 +10,8 @@
     width: 100%;
     top: 0;
     border-bottom: 1px solid @drawer-border-color;
-    background-color: @dark-grey;
-    color: @white;
+    background-color: @navigation-color;
+    color: @navigation-icon-color;
   }
 
   .drawer-toolbar .icon {
