--- a/less/src/quicknav.less
+++ b/less/src/quicknav.less
@@ -8,14 +8,15 @@
   border-radius: 0;
   padding: 23px 13px 20px;
   margin: 0;
-  color: @quaternary-color;
+  // color: @cta-button-text-color;
+  // background-color: @cta-button-color;
 
   &:hover {
-    background-color: @dark-grey;
+    background-color: @cta-button-color-hover;
     border: 0;
-    color: @white;
+    color: @cta-button-text-color-hover;
     .icon {
-      color: @white !important;
+      color: @cta-button-text-color-hover;
     }
   }
 
@@ -82,8 +83,8 @@
 .article {
   .block.quicknav {
     .quicknav-inner {
-      background-color: @quaternary-color-inverted;
-      color: @quaternary-color;
+      background-color: @cta-button-color;
+      color: @cta-button-text-color;
       max-width: 100%;
       height: 92px;
       padding: 0;
@@ -94,7 +95,7 @@
         width: 1px;
         height: 93px;
         margin-top: 0px;
-        background-color: @quaternary-color;
+        background-color: @cta-button-text-color;
         @media all and (max-width: (@device-width-medium)) {
           left: 25%;
         }
@@ -103,7 +104,7 @@
       .icon {
         font-size: 36px;
         top: 27px;
-        color: @quaternary-color;
+        color: @cta-button-text-color;
       }
 
       .icon-controls-left {
