Removed importants and clearup

--- a/less/src/tabs.less
+++ b/less/src/tabs.less
@@ -40,11 +40,10 @@
 			background-color: @component-background-color;
 			color: @item-text-color-selected;
 			font-weight: 600;
-			// border: 3px solid #4b4e4f !important;
 			border-bottom: 0;
 			height: 32px;
 			margin-top: -10px;
-			border-width: 1px 1px 0 !important;
+			border-width: 1px 1px 0;
 
 			&:after {
 				border-left-color: @item-color-selected;
