--- a/templates/page.hbs
+++ b/templates/page.hbs
@@ -40,20 +40,20 @@
 	<div class="page-footer-inner">
 		<div class='page-footer-logo'>
 			<div class="page-footer-icon">
-				King's<br>Business<br>School
+				King's<br>College<br>London
 			</div>
 			<div class="page-footer-copyright">
 				© King's College London. All rights reserved
 			</div>
 		</div>
-		<div class="page-footer-staircase">
+		<!-- <div class="page-footer-staircase"> CUSTOM FOR finBank
 			<div class="page-footer-staircase-inner">
 				<div class="staircase stair-1"></div>
 				<div class="staircase stair-2"></div>
 				<div class="staircase stair-3"></div>
 				<div class="staircase stair-4"></div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 </div>
 <div class="aria-label relative a11y-ignore-focus prevent-default" tabindex="0" role="region">{{_globals._accessibility._ariaLabels.pageEnd}}</div>
