--- a/less/src/theme-extras.less
+++ b/less/src/theme-extras.less
@@ -1,7 +1,7 @@
-// Additional theme classes or attributes to be applied in JSON for more custom style 
+// Additional theme classes or attributes to be applied in JSON for more custom style
 // ====================================================================
 
-// Divider block - used to separate content or break up pages. 
+// Divider block - used to separate content or break up pages.
 // =============
 
 // Class applies alternative background color and component styling
@@ -21,6 +21,18 @@
     }
     .component-inner {
     	background-color: transparent;
+    }
+}
+
+// mobile-only
+
+.mobile-only {
+    display: none;
+}
+
+@media only screen and (max-width: @device-width-medium) {
+    .mobile-only {
+        display: block;
     }
 }
 
@@ -74,7 +86,7 @@
 	}
 }
 
-// THIS CLASS IS FOR THE PURPOSE OF THE ADAPT DEMO 
+// THIS CLASS IS FOR THE PURPOSE OF THE ADAPT DEMO
 // blank component demo - applied at block level to add a background image in place of a blank component
 // ====================
 
